# tanuki-parser

./: .gitignore  CMakeLists.txt  README.md
tanuki/: tanuki.h
tanuki/lexer/: fragment.h  lexer.h  lexeritem.h  operation.h  rule.h  tokens.cpp  tokens.h
tanuki/misc/: exception.h  helper.h  metaprog.h  misc.h  ref.cpp  ref.h  string.cpp  string.h
tanuki/parser/: fragment.h  operation.h  parser.h  rule.h  special.cpp  special.h  tokens.cpp  tokens.h
testing/: framework.h  main.cpp
